<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F7F7">
        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <!-- TODO 1 Add <View>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimary"
                android:id="@+id/appBar"/>
                <include android:id="@+id/toolbar" layout="@layout/header"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:id="@+id/appTitle"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardSearch"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@id/appTitle"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="10dp"
                        android:text="@string/search_your_recipes"
                        android:textColor="#CA7474"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/ic_search_primary_light"
                        android:drawableStart="@drawable/ic_search_primary_light"
                        android:drawablePadding="10dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerHead"
                    android:foregroundGravity="center"
                    android:overScrollMode="never"
                    android:clipToPadding="false"
                    android:layout_below="@id/cardSearch"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">


                </androidx.viewpager.widget.ViewPager>
<!--                <include android:id="@+id/carousel" layout="@layout/menu_view_pager_header_shimmer"/>-->

            <TextView
                android:id="@+id/titleCategory"
                android:text="@string/meal_categories"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/viewPagerHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:layout_below="@id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:clipToPadding="false"
                />
<!--            <include android:id="@+id/shimmerCategory"-->
<!--                layout="@layout/item_recycler_category_shimmer" />-->
<!--            <TextView-->
<!--                android:padding="10dp"-->
<!--                android:gravity="center"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:text="@string/app_name"-->
<!--                android:background="@color/colorPrimary"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"/>-->

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>