<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".loginregister.RegisterActivity">



        <ImageView
            android:id="@+id/logo1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/logo"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@id/linear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415">

                <EditText
                    android:id="@+id/register_firstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:hint="First Name"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/register_lastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:inputType="textPersonName"/>
        </LinearLayout>

        <EditText
            android:id="@+id/register_email"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            />
        <EditText
            android:id="@+id/register_username"
            android:drawableRight="@drawable/ic_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="User Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            />
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="Phone Number"
            android:drawableRight="@drawable/ic_call_black_24dp"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="11"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_phone" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                   />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="Phone Number"
            android:drawableRight="@drawable/ic_call_black_24dp"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="11"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/forgot_pass"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="end"
            android:text="Already a Member, Click Here!"
            android:textColor="#0000FF"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput1"
            app:layout_constraintVertical_bias="0" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="SIGN UP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/borderlessButtonStyle"
            />
</androidx.constraintlayout.widget.ConstraintLayout>